2004-01-19  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-dtd.c, cong-dtd.h, plugin-random.c

	Random document plugin now makes use of DTD if available to try to generate valid random documents
	
	* plugin-random.c, Makefile.am, cong-app.c, cong-fake-plugin-hooks.h

	New plugin for generating random documents

2004-01-16  Daniel van Eeden  <daniel_e@dds.nl>

	* cong-file-new.c, cong-primary-window.c & global.h

	There should be a "new document" button if no document is loaded.

2004-01-16  Dave Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-node.c:

	Bulletproofing for the Cleanup XML Source tool

	* cong-editor-widget3.c

	Removed dead code

2004-01-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c

	Suppress some debug logging

2004-01-15  Geert Stappers <stappers@stappers.nl>

	* plugin-templates.c

	Fixed C99ism build problem on gcc-2.95.4

2004-01-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c

	Suppress a warning due to clashing PRIVATE macros
	
2004-01-14  Jeff Martin <jeff@custommonkey.org>

	* plugin-templates.c

	Change template code to use a <cong:template> element

2004-01-13  Daniel Larsson <Daniel.Larsson@servicefactory.se>

	* plugin-templates.c

	Free a GSList actual with a g_slist_free()

2004-01-11  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, cong-command.c, cong-command.h, cong-edit-find-and-replace.c, cong-editor-node.c, cong-editor-node.h, cong-fake-plugin-hooks.h, cong-file-export.c, cong-file-import.c, cong-file-new.c, cong-file-print.c, cong-menus.c, cong-modification.c, cong-node-properties-dialog.c, cong-plugin.c, cong-plugin.h, global.h, popup.c

	Big reorganisation of plugin code: plugins and services are now GObjects rather than dumb structs; they now have individual files per class rather than a monolithic cong-plugin.[ch]; services no longer know which plugin they belong to (affecting GConf paths accordingly)
