@@ -1,5 +1,9 @@
 2004-01-19  Dave Malcolm  <david@davemalcolm.demon.co.uk>
 
+	* plugin-random.c
+
+	Fixed a bug in traversing the content model of an element in the DTD
+
 	* cong-dtd.c, cong-dtd.h, plugin-random.c
 
 	Random document plugin now makes use of DTD if available to try to generate valid random documents
